--- a/index.html
+++ b/index.html
@@ -227,17 +227,17 @@
                <div class="card">
                    <img src="./images/phone-2.png" alt="">
                    <h2>Call Me on</h2>
-                   <h6 id="no"></h6>
+                   <h6>+91-12345 67890</h6>
                </div>
                <div class="card">
                     <img src="./images/msg.png" alt="">
                     <h2>Email Me At</h2>
-                    <h6 id="em"></h6>
+                    <h6>abcdef@gmail.com</h6>
                 </div>
                 <div class="card">
                     <img src="./images/li1.png" alt="">
                     <h2>Reach Me At</h2>
-                    <a href="#" id="ln"></a>
+                    <a href="#">abha-rathore-872349179</a>
                 </div>
            </div>
     
