--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                     <div class="right">
-                        <button class="btn btn-primary"><a href="#contact">Contact</a></button>
+                        <button class="btn btn-primary" onclick="location.href='#contact'">Contact</button>
                     </div>
                 </nav>
     
@@ -71,7 +71,7 @@
                         based on merits and expected to graduate with a B.Tech. in Computer
                         Science from Techno India NJR Institute of Technology in the year of 2023.</p>
                         <div>
-                            <button class = "btn btn-secondary"><a href="#available">Download CV</a></button>
+                            <button class = "btn btn-secondary" onclick="location.href = '#available'">Download CV</a></button>
                         </div>
                     </div>
                 </div>
