--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                         contribute to organization's objectives and requirements by putting all my hardwork and amounts of 
                         energy.</p>
                     <div class="social flex">
-                        <a href="#"><i class="fa fa-github"></i></a>
-                        <a href="#"><i class="fa fa-twitter"></i></a>
-                        <a href="#"><i class="fa fa-linkedin"></i></a>
+                        <a href="https://github.com/abharathore06" target="_blank"><i class="fa fa-github"></i></a>
+                        <a href="https://twitter.com/RathoreAabha" target="_blank"><i class="fa fa-twitter"></i></a>
+                        <a href="https://www.linkedin.com/in/abha-rathore-872349179/" target="_blank"><i class="fa fa-linkedin"></i></a>
                         <a href="#"><i class="fa fa-facebook"></i></a>
                     </div>
                 </div>
@@ -268,9 +268,9 @@
             </div>
             
             <div class="footer-socials">
-                <a href="#"><i class="fa fa-github"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="https://github.com/abharathore06" target="_blank"><i class="fa fa-github"></i></a>
+                <a href="https://twitter.com/RathoreAabha" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.linkedin.com/in/abha-rathore-872349179/" target="_blank"><i class="fa fa-linkedin"></i></a>
                 <a href="#"><i class="fa fa-facebook"></i></a>
             </div>
     
